# SlugCourses

./: .gitignore  LICENSE  PRIVACY.md  README.md  abouttheproject.md  build.gradle.kts  gradle.properties  requirements.txt  settings.gradle.kts
.github/workflows/: build-app.yml
android/: .gitignore  build.gradle.kts  secrets.defaults.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: .gitignore  build.gradle.kts  gradle.properties
app/.fleet/: receipt.json
app/.github/workflows/: build-app.yml
app/composeApp/: build.gradle.kts  common-rules.pro
app/composeApp/release/: output-metadata.json
app/composeApp/src/androidMain/: AndroidManifest.xml
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
app/iosApp/iosApp/: ContentView.swift
backend/: .env.example  classsearchapi.py  compose.yml  course.py  generate_requirements.sh  history_recommendation.py  literallyeverything  literallyeverything.json  populate_embeddings.py  process_grades.py  pyproject.toml  recommendation.py  requirements.txt  run.sh  run_history.sh  scraper.py  scraper2.py  scraper3.py  scraper_parallel.py  spec-file.txt
backend/cache/: .gitignore  classdocument  classdocuments  classes.json  updatedclasses  updatedclasses.json
composeApp/: build.gradle.kts  common-rules.pro  desktop-rules.pro
composeApp/release/: output-metadata.json
composeApp/src/androidMain/kotlin/: DbDriver.kt
composeApp/src/commonMain/kotlin/: App.kt  ChatScreen.kt  DbDriver.kt  DetailedResultsScreen.kt  FavoritesScreen.kt  HomeScreen.kt  ResultsScreen.kt  (+1 more)
composeApp/webpack.config.d/: sqljs-config.js
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+123 files in other folders)
