[tool.poetry]
name = "SlugCourses"
version = "1.0"
description = "UCSC course search backend"
authors = ["prapooskur <prapooskur@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, <3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
tqdm = "^4.66.5"
supabase = "^2.7.1"
requests = "^2.32.3"
haystack-ai = "^2.4.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"
torch = "^2.4.0"
psycopg2-binary = "^2.9.9"
google-generativeai = "^0.7.2"


[[tool.poetry.source]]
# for gpu acceleration
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
