[project]
name = "SlugCourses"
version = "1.0"
description = "UCSC course search backend"
authors = [{ name = "prapooskur", email = "prapooskur@gmail.com" }]
requires-python = ">=3.10, ~=3.12"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "lxml>=5.3.0,<6",
    "fastapi>=0.112.1,<0.113",
    "uvicorn[standard]>=0.30.6,<0.31",
    "tqdm>=4.66.5,<5",
    "supabase>=2.7.1,<3",
    "requests>=2.32.3,<3",
    "haystack-ai>=2.4.0,<3",
    "python-dotenv>=1.0.1,<2",
    "sentence-transformers>=3.0.1,<4",
    "psycopg2-binary>=2.9.9,<3",
    "google-generativeai>=0.7.2,<0.8",
    "torch==2.4.0",
    "pgvector-haystack>=0.5.1,<0.6",
    "transformers[sentencepiece, torch]>=4.44.1,<5",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
